--- a/_typography.scss
+++ b/_typography.scss
@@ -8,6 +8,6 @@ $logo-size          :   22px;
 $ul-size            :   1.5rem;
 $anchor-size        :   20px;
 $anchor-size-mobile :   25px;
-$footer-size        :   1em;
-$headline-size      :   9em;
+$footer-size        :   .7rem;
+$headline-size      :   20rem;
 $form-size          :   14px;
