--- a/_colors.scss
+++ b/_colors.scss
@@ -1,4 +1,4 @@
 //colors
-$strevitz-yellow    :   #ffdf2c;
+$strevitz-yellow    :   #ffdd00;
 $shadow-color       :   #0f0f0f75;
 $headline-color     :   #020202;
