--- a/main.css
+++ b/main.css
@@ -189,7 +189,7 @@ span {
 
 #linkedin {
   position: absolute;
-  top: 207%;
+  top: 0%;
   left: 80%;
   z-index: 2;
   width: 4em;
@@ -198,10 +198,10 @@ span {
 
 #github {
   position: absolute;
-  top: 109%;
-  left: 80%;
-  z-index: 2;
-  width: 4em;
+  top: 0%;
+  left: 78%;
+  z-index: 5;
+  width: 4rem;
   height: auto;
 }
 
@@ -214,11 +214,11 @@ span {
 }
 
 .circle1 {
-  background-color: #ffdf2c;
-  top: 92%;
-  left: 86%;
-  width: 12%;
-  height: 40vh;
+  background-color: #ffdd00;
+  top: -12%;
+  left: 69%;
+  width: 35vw;
+  height: 35vh;
 }
 
 .circle2 {
@@ -233,13 +233,14 @@ footer {
   background-color: black;
   text-align: center;
   color: white;
-  font-size: 1em;
+  font-size: 0.7rem;
   padding-bottom: 30px;
 }
 
 /***********************[ Sections ]***********************/
 section {
   min-height: 100vh;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -249,6 +250,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
 }
 
 section h2 {
@@ -260,14 +262,16 @@ section h2 {
 
 .home {
   position: relative;
-  background: #ffdf2c;
+  background: #ffdd00;
 }
 
 .project {
+  position: relative;
   background: white;
 }
 
 .contact {
+  position: relative;
   background: black;
 }
 
@@ -281,35 +285,46 @@ section h2 {
 }
 
 #headline1 {
-  font-size: 9em;
-  top: 20%;
-  left: 0;
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  font-size: 20rem;
+  top: -10%;
+  left: 5%;
+  -webkit-transform: translate(-10%, -5%);
+          transform: translate(-10%, -5%);
+  z-index: 0;
 }
 
 #headline2 {
-  font-size: 9em;
-  top: 149%;
-  left: 0;
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  font-size: 20rem;
+  top: -10%;
+  left: 11%;
+  -webkit-transform: translate(-10%, -11%);
+          transform: translate(-10%, -11%);
 }
 
 #headline3 {
-  font-size: 9em;
+  font-size: 20rem;
   color: white;
   opacity: 0.1;
-  top: 248%;
-  left: -32%;
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  top: -10%;
+  left: 11%;
+  -webkit-transform: translate(-10%, -11%);
+          transform: translate(-10%, -11%);
+}
+
+#headline4 {
+  font-size: 20rem;
+  top: -15%;
+  left: 5%;
+  -webkit-transform: translate(-10%, -5%);
+          transform: translate(-10%, -5%);
+  z-index: 0;
 }
 
 /***********************[ Form ]***********************/
 .form {
-  padding-left: 5rem;
-  margin-top: 8rem;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -360,7 +375,7 @@ section h2 {
   bottom: -1px;
   height: 100%;
   width: 100%;
-  border-bottom: 3px solid #ffdf2c;
+  border-bottom: 3px solid #ffdd00;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   -webkit-transition: -webkit-transform 0.3s ease;
@@ -373,7 +388,7 @@ section h2 {
   -webkit-transform: translateY(-150%);
           transform: translateY(-150%);
   font-size: 14px;
-  color: #ffdf2c;
+  color: #ffdd00;
 }
 
 .name-form input:focus + .label-name::after, .name-form input:valid + .label-name::after {
@@ -396,19 +411,19 @@ button {
 }
 
 .btn-warning {
-  background-color: #ffdf2c;
+  background-color: #ffdd00;
 }
 
 /***********************[ Contact links ]***********************/
 .contact-item {
-  color: #ffdf2c;
+  color: #ffdd00;
   text-decoration: none !important;
   display: inline-block;
   position: relative;
 }
 
 .contact-item:hover {
-  color: #ffdf2c;
+  color: #ffdd00;
 }
 
 .contact-item:hover::after {
@@ -424,34 +439,70 @@ button {
   height: 3px;
   left: 0%;
   position: absolute;
-  background: #ffdf2c;
+  background: #ffdd00;
   -webkit-transition: width 0.3s ease 0s, left 0.3s ease 0s;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
 }
 
 .contact-info {
-  padding-right: 5rem;
-  margin-top: 1rem;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
   color: white;
   line-height: 3rem;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
 }
 
+.contact-box {
+  margin-top: 24vh;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 @media screen and (max-width: 768px) {
+  .contact-info {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 5vh;
+  }
+  .form {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-bottom: 10vh;
+  }
+  .contact-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .line {
     width: 30px;
     height: 3px;
@@ -511,11 +562,158 @@ button {
     transition: all 0.5s ease 0.4s;
   }
   .nav-links li:nth-child(3) {
+    -webkit-transition: all 0.5s ease 0.5s;
+    transition: all 0.5s ease 0.5s;
+  }
+  .nav-links li:nth-child(4) {
     -webkit-transition: all 0.5s ease 0.6s;
     transition: all 0.5s ease 0.6s;
   }
   .nav-links li.fade {
     opacity: 1;
   }
+}
+
+:root {
+  --hue-neutral: 52;
+  --hue-wrong: 340;
+  --hue-correct: 162;
+}
+
+.quiz {
+  position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 82vh;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+}
+
+.quiz h2 {
+  position: absolute;
+  color: #020202;
+  z-index: 0;
+  opacity: 0.05;
+}
+
+body {
+  --hue: var(--hue-neutral);
+  background-color: hsl(var(--hue), 100%, 50%);
+}
+
+body.correct {
+  --hue: var(--hue-correct);
+}
+
+body.wrong {
+  --hue: var(--hue-wrong);
+}
+
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+  -webkit-box-shadow: 0 0 10px 2px;
+          box-shadow: 0 0 10px 2px;
+  z-index: 1;
+}
+
+.btn-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (auto)[2];
+      grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.btn {
+  --hue: var(--hue-neutral);
+  border: 1px solid hsl(var(--hue), 100%, 40%);
+  background-color: hsl(var(--hue), 100%, 50%);
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: black;
+  outline: none;
+}
+
+.btn:hover {
+  border-color: black;
+}
+
+.btn.correct {
+  --hue: var(--hue-correct);
+}
+
+.btn.wrong {
+  --hue: var(--hue-wrong);
+}
+
+.start-btn, .next-btn {
+  background-color: hsl(var(--hue), 100%, 10%);
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  color: white;
+}
+
+.start-btn:hover, .next-btn:hover {
+  color: lightgray !important;
+}
+
+.controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hide {
+  display: none;
+}
+
+.quiz-footer {
+  padding: 0;
+}
+
+.footer-text-box {
+  height: 8vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 20px 0;
+}
+
+h3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 /*# sourceMappingURL=main.css.map */
