--- a/main.css
+++ b/main.css
@@ -151,7 +151,7 @@ span {
     pointer-events: none;
 }
 */
-/***********************[ Circles ]***********************/
+/***********************[ social links ]***********************/
 #avatar {
   position: absolute;
   border-bottom-left-radius: 10%;
@@ -165,19 +165,88 @@ span {
   box-shadow: 0px 2px 14px 0px #0f0f0f75;
 }
 
-.circle2 {
-  -webkit-clip-path: circle(30.1% at 50% 50%);
-          clip-path: circle(30.1% at 50% 50%);
-  background-color: #ffffff;
+.linkedin-triangle {
+  fill: #fff;
+  color: #000;
   position: absolute;
-  z-index: 1;
+  top: 0;
+  border: 0;
+  right: 0;
 }
 
-.circle2 {
-  top: 192%;
-  left: 86%;
-  width: 12%;
-  height: 40vh;
+.linkedin {
+  color: black;
+  font-weight: bold;
+  position: absolute;
+  font-size: 2rem;
+  top: 2%;
+  right: 1%;
+  z-index: 2;
+  -webkit-transform: translate(-2%, -1%) rotate(45deg);
+          transform: translate(-2%, -1%) rotate(45deg);
+}
+
+.github-corner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 0;
+  fill: #ffdd00;
+  color: black;
+  position: absolute;
+  top: 0;
+  border: 0;
+  right: 0;
+}
+
+.octo-body, .octo-arm {
+  color: black !important;
+}
+
+.github-corner:hover .octo-arm {
+  -webkit-animation: octocat-wave 560ms ease-in-out;
+          animation: octocat-wave 560ms ease-in-out;
+}
+
+@-webkit-keyframes octocat-wave {
+  0%, 100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  20%, 60% {
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  40%, 80% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+}
+
+@keyframes octocat-wave {
+  0%, 100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  20%, 60% {
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  40%, 80% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+}
+
+@media (max-width: 500px) {
+  .github-corner:hover .octo-arm {
+    -webkit-animation: none;
+            animation: none;
+  }
+  .github-corner .octo-arm {
+    -webkit-animation: octocat-wave 560ms ease-in-out;
+            animation: octocat-wave 560ms ease-in-out;
+  }
 }
 
 /***********************[ Footer ]***********************/
@@ -256,18 +325,6 @@ section h2 {
 #headline3 {
   color: white;
   opacity: 0.13;
-}
-
-.linkedin {
-  color: black;
-  font-weight: bold;
-  position: absolute;
-  font-size: 2rem;
-  top: 2%;
-  right: 1%;
-  z-index: 2;
-  -webkit-transform: translate(-2%, -1%) rotate(45deg);
-          transform: translate(-2%, -1%) rotate(45deg);
 }
 
 /***********************[ Form ]***********************/
